# keraformer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-lint.yml
examples/: chat_tiny_chatbot.py  common.py  evaluate_tiny_chatbot.py  train_tiny_chatbot.py
keraformer/: __init__.py
keraformer/attention/: __init__.py  cross_attention.py  flash_attention.py  grouped_query_attention.py  linear_attention.py  multi_head_attention.py  multi_head_latent_attention.py  multi_query_attention.py  scaled_dot_product.py  sliding_window_attention.py
keraformer/blocks/: __init__.py  decoder_block.py  encoder_block.py  encoder_decoder_block.py  parallel_block.py
keraformer/embeddings/: __init__.py  token_embedding.py
keraformer/feedforward/: __init__.py  conv_ffn.py  ffn.py  gated_ffn.py  moe_ffn.py
keraformer/losses/: __init__.py  contrastive.py  cross_entropy.py  focal_loss.py  masked_lm_loss.py
keraformer/masks/: __init__.py  causal_mask.py  padding_mask.py  prefix_lm_mask.py
keraformer/models/: __init__.py  bert.py  gpt.py  t5.py  transformer.py  vision_transformer.py
keraformer/normalization/: __init__.py  deep_norm.py  group_norm.py  layer_norm.py  rms_norm.py
keraformer/optimizers/: __init__.py  adafactor.py  adam_w.py  lion.py  noam_schedule.py
keraformer/utils/: __init__.py  checkpoint.py  data.py  inference.py  metrics.py  (+2 more)
tests/: lint_file.py  test_attention.py  test_blocks.py  test_embeddings.py  test_feedforward.py  test_losses.py  test_masks.py  test_models.py  test_normalization.py  test_optimizers.py  test_utils.py
(+7 files in other folders)
