[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keraformer"
version = "0.1.0"
description = "Modular Keras transformer building blocks"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["keraformer*"]
